-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.1
-
4970a55635 (qt/qtdeclarative/dev) 4970a55635 (qt/tqtc-qtdeclarative/dev)
In qv4sparsearray_p.h, in SparseArray::pop_front(), the variable n is shadowed, causing C4456 with MSVC. The fix is simple enough, just assign to the existing variable rather than shadow it.
| For Gerrit Dashboard: QTBUG-104366 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 417974,2 | Silence MSVC warning in qv4sparsearray_p.h | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |