Silence MSVC warning in qv4sparsearray_p.h

Rename variable to not shadow another.

Fixes: QTBUG-104366
Change-Id: I6906ec6ded8fc19469fa1b1676d57d1082c5a01c
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>